--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,67 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .about__title {
-        font-size: 24px;
+        font-size: 20px;
         margin-bottom: 20px;
+    }
+
+
+    .project {
+        padding: 20px;
+        max-width: 375px;
+
+    }
+
+    .project__blok {
+        padding-left: 5px;
+    }
+
+    .project__article {
+        display: flex;
+        /*justify-content: space-around;*/
+        /*align-items: flex-start;*/
+    }
+
+    .project__picture {
+        max-width: 25px;
+    }
+
+    .project__title {
+        font-size: 12px;
+    }
+
+    .project__desc {
+        font-size: 8px;
+    }
+
+    .process {
+        padding: 20px;
+    }
+
+    .process__title {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .video__picture {
+        max-width: 375px;
+    }
+
+    .video__button {
+        max-width: 50px;
+    }
+
+    .footer {
+        padding: 20px;
+        margin-top: 50px;
+    }
+
+    .footer__name {
+        font-size: 14px;
+        margin-bottom: 5px;
+    }
+
+    .footer__copyright {
+        font-size: 10px;
     }
 }
