--- a/css/style.css
+++ b/css/style.css
@@ -184,12 +184,15 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
     font-size: 21px;
     align-items: flex-start;
+    line-height: 1.3;
+
 }
 
 .project__desc {
     margin: 0;
     font-size: 16px;
     align-items: flex-end;
+    line-height: 1;
 }
 
 /*project*/
@@ -274,6 +277,129 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*footer*/
+
+
+@media screen and (min-width: 360px) {
+
+    .center {
+        max-width: 360px;
+    }
+
+    body {
+        font-size: 10px;
+    }
+
+    .header {
+        padding: 20px;
+        max-width: 360px;
+    }
+
+
+    .nav__list {
+        gap: 5px;
+        padding: 5px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 20px;
+
+    }
+
+    .offer__content {
+        max-width: 360px;
+    }
+
+    .offer__title {
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    .offer__desc {
+        margin-bottom: 15px;
+    }
+
+    .btn {
+        min-height: 30px;
+        padding: 10px;
+        min-width: 130px;
+    }
+
+
+    .about {
+        padding: 20px;
+    }
+
+    .about__title {
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
+
+
+    .project {
+        padding: 20px;
+        gap: 40px;
+        max-width: 360px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+
+    }
+
+    .project__blok {
+        padding-left: 3px;
+    }
+
+
+    .project__picture {
+        max-width: 20px;
+    }
+
+    .project__title {
+        font-size: 12px;
+    }
+
+    .project__desc {
+        font-size: 8px;
+    }
+
+    .process {
+        padding: 20px;
+    }
+
+    .process__title {
+        font-size: 20px;
+        margin-bottom: 15px;
+        margin-top: 15px;
+    }
+
+
+    .video {
+        max-width: 360px;
+    }
+
+    .video__picture {
+        max-width: 360px;
+    }
+
+    .video__button {
+        max-width: 40px;
+    }
+
+    .footer {
+        padding: 20px;
+        margin-top: 40px;
+    }
+
+    .footer__name {
+        font-size: 14px;
+        margin-bottom: 5px;
+    }
+
+    .footer__copyright {
+        font-size: 10px;
+    }
+}
 
 
 @media screen and (min-width: 375px) {
@@ -367,6 +493,7 @@ h1, h2, h3, h4, h5, h6 {
     .process__title {
         font-size: 20px;
         margin-bottom: 20px;
+        margin-top: 20px;
     }
 
 
@@ -394,5 +521,500 @@ h1, h2, h3, h4, h5, h6 {
 
     .footer__copyright {
         font-size: 10px;
+    }
+}
+
+
+@media screen and (min-width: 390px) {
+
+    .center {
+        max-width: 390px;
+    }
+
+    body {
+        font-size: 10px;
+    }
+
+    .header {
+        padding: 20px;
+        max-width: 390px;
+    }
+
+
+    .nav__list {
+        gap: 10px;
+        padding: 10px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 20px;
+
+    }
+
+    .offer__content {
+        max-width: 390px;
+    }
+
+    .offer__title {
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    .offer__desc {
+        margin-bottom: 20px;
+    }
+
+    .btn {
+        min-height: 30px;
+        padding: 15px;
+        min-width: 160px;
+    }
+
+
+    .about {
+        padding: 20px;
+    }
+
+    .about__title {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+
+    .project {
+        padding: 20px;
+        gap: 40px;
+        max-width: 390px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+
+    }
+
+    .project__blok {
+        padding-left: 5px;
+    }
+
+
+    .project__picture {
+        max-width: 25px;
+    }
+
+    .project__title {
+        font-size: 12px;
+    }
+
+    .project__desc {
+        font-size: 8px;
+    }
+
+    .process {
+        padding: 20px;
+
+    }
+
+    .process__title {
+        font-size: 20px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .video {
+        max-width: 390px;
+    }
+
+    .video__picture {
+        max-width: 390px;
+    }
+
+    .video__button {
+        max-width: 50px;
+    }
+
+    .footer {
+        padding: 20px;
+        margin-top: 50px;
+    }
+
+    .footer__name {
+        font-size: 14px;
+        margin-bottom: 5px;
+    }
+
+    .footer__copyright {
+        font-size: 10px;
+    }
+}
+
+
+@media screen and (min-width: 412px) {
+
+    .center {
+        max-width: 412px;
+    }
+
+    body {
+        font-size: 11px;
+    }
+
+    .header {
+        padding: 20px;
+        max-width: 412px;
+    }
+
+
+    .nav__list {
+        gap: 10px;
+        padding: 10px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 20px;
+
+    }
+
+    .offer__content {
+        max-width: 412px;
+    }
+
+    .offer__title {
+        font-size: 28px;
+        margin-bottom: 20px;
+    }
+
+    .offer__desc {
+        margin-bottom: 20px;
+    }
+
+    .btn {
+        min-height: 30px;
+        padding: 15px;
+        min-width: 180px;
+    }
+
+
+    .about {
+        padding: 20px;
+    }
+
+    .about__title {
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+
+    .project {
+        padding: 20px;
+        gap: 40px;
+        max-width: 412px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+
+    }
+
+    .project__blok {
+        padding-left: 5px;
+    }
+
+
+    .project__picture {
+        max-width: 30px;
+    }
+
+    .project__title {
+        font-size: 12px;
+    }
+
+    .project__desc {
+        font-size: 10px;
+    }
+
+    .process {
+        padding: 20px;
+    }
+
+    .process__title {
+        font-size: 24px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .video {
+        max-width: 412px;
+    }
+
+    .video__picture {
+        max-width: 412px;
+    }
+
+    .video__button {
+        max-width: 50px;
+    }
+
+    .footer {
+        padding: 20px;
+        margin-top: 50px;
+    }
+
+    .footer__name {
+        font-size: 16px;
+        margin-bottom: 5px;
+    }
+
+    .footer__copyright {
+        font-size: 12px;
+    }
+}
+
+
+@media screen and (min-width: 414px) {
+
+    .center {
+        max-width: 414px;
+    }
+
+    body {
+        font-size: 11px;
+    }
+
+    .header {
+        padding: 20px;
+        max-width: 414px;
+    }
+
+
+    .nav__list {
+        gap: 10px;
+        padding: 10px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 20px;
+
+    }
+
+    .offer__content {
+        max-width: 414px;
+    }
+
+    .offer__title {
+        font-size: 28px;
+        margin-bottom: 20px;
+    }
+
+    .offer__desc {
+        margin-bottom: 20px;
+    }
+
+    .btn {
+        min-height: 30px;
+        padding: 15px;
+        min-width: 180px;
+    }
+
+
+    .about {
+        padding: 20px;
+    }
+
+    .about__title {
+        font-size: 24px;
+        margin-bottom: 20px;
+        line-height: 1.30;
+    }
+
+
+    .project {
+        padding: 20px;
+        gap: 40px;
+        max-width: 414px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+
+    }
+
+    .project__blok {
+        padding-left: 5px;
+    }
+
+
+    .project__picture {
+        max-width: 30px;
+    }
+
+    .project__title {
+        font-size: 12px;
+    }
+
+    .project__desc {
+        font-size: 10px;
+    }
+
+    .process {
+        padding: 20px;
+    }
+
+    .process__title {
+        font-size: 24px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .video {
+        max-width: 414px;
+    }
+
+    .video__picture {
+        max-width: 414px;
+    }
+
+    .video__button {
+        max-width: 50px;
+    }
+
+    .footer {
+        padding: 20px;
+        margin-top: 50px;
+    }
+
+    .footer__name {
+        font-size: 16px;
+        margin-bottom: 5px;
+    }
+
+    .footer__copyright {
+        font-size: 12px;
+    }
+}
+
+
+@media screen and (min-width: 430px) {
+
+    .center {
+        max-width: 430px;
+    }
+
+    body {
+        font-size: 12px;
+    }
+
+    .header {
+        padding: 20px;
+        max-width: 430px;
+    }
+
+
+    .nav__list {
+        gap: 10px;
+        padding: 10px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 20px;
+
+    }
+
+    .offer__content {
+        max-width: 430px;
+    }
+
+    .offer__title {
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+
+    .offer__desc {
+        margin-bottom: 20px;
+    }
+
+    .btn {
+        min-height: 30px;
+        padding: 15px;
+        min-width: 200px;
+    }
+
+
+    .about {
+        padding: 20px;
+    }
+
+    .about__title {
+        font-size: 26px;
+        margin-bottom: 20px;
+        line-height: 1.30;
+    }
+
+
+    .project {
+        padding: 20px;
+        gap: 40px;
+        max-width: 430px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+
+    }
+
+    .project__blok {
+        padding-left: 5px;
+    }
+
+
+    .project__picture {
+        max-width: 30px;
+    }
+
+    .project__title {
+        font-size: 13px;
+    }
+
+    .project__desc {
+        font-size: 11px;
+    }
+
+    .process {
+        padding: 20px;
+    }
+
+    .process__title {
+        font-size: 26px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .video {
+        max-width: 430px;
+    }
+
+    .video__picture {
+        max-width: 430px;
+    }
+
+    .video__button {
+        max-width: 60px;
+    }
+
+    .footer {
+        padding: 20px;
+        margin-top: 50px;
+    }
+
+    .footer__name {
+        font-size: 18px;
+        margin-bottom: 5px;
+    }
+
+    .footer__copyright {
+        font-size: 14px;
     }
 }
