--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .project {
         padding: 20px;
-        gap: 40px;
+        gap: 45px;
+        row-gap: 20px;
         max-width: 360px;
         display: flex;
         flex-wrap: wrap;
@@ -356,11 +357,13 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .project__title {
-        font-size: 12px;
+        font-size: 8px;
+        line-height: 1.3;
     }
 
     .project__desc {
-        font-size: 8px;
+        font-size: 6px;
+        line-height: 1.3;
     }
 
     .process {
@@ -462,6 +465,7 @@ h1, h2, h3, h4, h5, h6 {
     .project {
         padding: 20px;
         gap: 40px;
+        row-gap: 20px;
         max-width: 375px;
         display: flex;
         flex-wrap: wrap;
@@ -479,11 +483,13 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .project__title {
-        font-size: 12px;
+        font-size: 10px;
+        line-height: 1.4;
     }
 
     .project__desc {
         font-size: 8px;
+        line-height: 1.1;
     }
 
     .process {
@@ -585,6 +591,7 @@ h1, h2, h3, h4, h5, h6 {
     .project {
         padding: 20px;
         gap: 40px;
+        row-gap: 20px;
         max-width: 390px;
         display: flex;
         flex-wrap: wrap;
@@ -602,11 +609,13 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .project__title {
-        font-size: 12px;
+        font-size: 10px;
+        line-height: 1.4;
     }
 
     .project__desc {
         font-size: 8px;
+        line-height: 1;
     }
 
     .process {
@@ -709,6 +718,7 @@ h1, h2, h3, h4, h5, h6 {
     .project {
         padding: 20px;
         gap: 40px;
+        row-gap: 20px;
         max-width: 412px;
         display: flex;
         flex-wrap: wrap;
@@ -726,11 +736,13 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .project__title {
-        font-size: 12px;
+        font-size: 11px;
+        line-height: 1.6;
     }
 
     .project__desc {
-        font-size: 10px;
+        font-size: 9px;
+        line-height: 1;
     }
 
     .process {
@@ -772,7 +784,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-@media screen and (min-width: 450px) {
+@media screen and (min-width: 414px) {
 
     .center {
         max-width: 414px;
@@ -833,6 +845,7 @@ h1, h2, h3, h4, h5, h6 {
     .project {
         padding: 20px;
         gap: 40px;
+        row-gap: 20px;
         max-width: 414px;
         display: flex;
         flex-wrap: wrap;
@@ -850,11 +863,13 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .project__title {
-        font-size: 12px;
+        font-size: 11px;
+        line-height: 1.6;
     }
 
     .project__desc {
-        font-size: 10px;
+        font-size: 9px;
+        line-height: 1;
     }
 
     .process {
@@ -956,6 +971,7 @@ h1, h2, h3, h4, h5, h6 {
     .project {
         padding: 20px;
         gap: 40px;
+        row-gap: 20px;
         max-width: 430px;
         display: flex;
         flex-wrap: wrap;
@@ -973,11 +989,13 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .project__title {
-        font-size: 13px;
+        font-size: 11px;
+        line-height: 1.6;
     }
 
     .project__desc {
-        font-size: 11px;
+        font-size: 9px;
+        line-height: 1;
     }
 
     .process {
@@ -1009,12 +1027,12 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .footer__name {
-        font-size: 18px;
+        font-size: 16px;
         margin-bottom: 5px;
     }
 
     .footer__copyright {
-        font-size: 14px;
+        font-size: 12px;
     }
 }
 
@@ -1026,7 +1044,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     body {
-        font-size: 12px;
+        font-size: 14px;
     }
 
     .header {
@@ -1051,7 +1069,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .offer__title {
-        font-size: 30px;
+        font-size: 32px;
         margin-bottom: 20px;
     }
 
@@ -1079,7 +1097,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .project {
         padding: 20px;
-        gap: 40px;
+        column-gap: 65px;
+        row-gap: 25px;
         max-width: 540px;
         display: flex;
         flex-wrap: wrap;
@@ -1097,11 +1116,13 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .project__title {
-        font-size: 13px;
+        font-size: 12px;
+        line-height: 1.5;
     }
 
     .project__desc {
-        font-size: 11px;
+        font-size: 10px;
+        line-height: 1.2;
     }
 
     .process {
@@ -1139,5 +1160,996 @@ h1, h2, h3, h4, h5, h6 {
 
     .footer__copyright {
         font-size: 14px;
+    }
+}
+
+
+@media screen and (min-width: 768px) {
+
+    .center {
+        max-width: 768px;
+    }
+
+    body {
+        font-size: 14px;
+    }
+
+    .header {
+        padding: 40px;
+        max-width: 768px;
+    }
+
+
+    .nav__list {
+        gap: 10px;
+        padding: 10px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 40px 40px;
+
+    }
+
+    .offer__content {
+        max-width: 500px;
+    }
+
+    .offer__title {
+        font-size: 32px;
+        margin-bottom: 20px;
+    }
+
+    .offer__desc {
+        margin-bottom: 20px;
+    }
+
+    .btn {
+        min-height: 30px;
+        padding: 15px;
+        min-width: 200px;
+    }
+
+
+    .about {
+        padding: 80px 40px;
+    }
+
+    .about__title {
+        font-size: 26px;
+        margin-bottom: 20px;
+
+    }
+
+
+    .project {
+        padding: 40px 20px;
+        gap: 30px;
+        max-width: 768px;
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+    .project__blok {
+        padding-left: 5px;
+    }
+
+
+    .project__picture {
+        max-width: 30px;
+    }
+
+    .project__title {
+        font-size: 12px;
+        line-height: 1.3;
+    }
+
+    .project__desc {
+        font-size: 10px;
+        line-height: 1.2;
+    }
+
+    .process {
+        padding: 80px 40px;
+    }
+
+    .process__title {
+        font-size: 26px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .video {
+        max-width: 768px;
+    }
+
+    .video__picture {
+        max-width: 768px;
+    }
+
+    .video__button {
+        max-width: 80px;
+    }
+
+    .footer {
+        padding: 40px;
+        margin-top: 80px;
+    }
+
+    .footer__name {
+        font-size: 18px;
+        margin-bottom: 5px;
+    }
+
+    .footer__copyright {
+        font-size: 14px;
+    }
+}
+
+
+@media screen and (min-width: 820px) {
+
+    .center {
+        max-width: 820px;
+    }
+
+    body {
+        font-size: 20px;
+    }
+
+    .header {
+        padding: 40px;
+        max-width: 820px;
+    }
+
+
+    .nav__list {
+        gap: 10px;
+        padding: 10px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 40px;
+
+    }
+
+    .offer__content {
+        max-width: 650px;
+    }
+
+    .offer__title {
+        font-size: 34px;
+        margin-bottom: 40px;
+    }
+
+    .offer__desc {
+        margin-bottom: 40px;
+    }
+
+    .btn {
+        min-height: 30px;
+        padding: 20px;
+        min-width: 250px;
+    }
+
+
+    .about {
+        padding: 60px 40px;
+    }
+
+    .about__title {
+        font-size: 28px;
+        margin-bottom: 20px;
+
+    }
+
+
+    .project {
+        padding: 40px;
+        gap: 30px;
+        max-width: 820px;
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+    .project__blok {
+        padding-left: 5px;
+    }
+
+
+    .project__picture {
+        max-width: 30px;
+    }
+
+    .project__title {
+        font-size: 14px;
+        line-height: 1.1;
+    }
+
+    .project__desc {
+        font-size: 10px;
+        line-height: 1.3;
+    }
+
+    .process {
+        padding: 60px 40px;
+    }
+
+    .process__title {
+        font-size: 28px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .video {
+        max-width: 820px;
+    }
+
+    .video__picture {
+        max-width: 820px;
+    }
+
+    .video__button {
+        max-width: 80px;
+    }
+
+    .footer {
+        padding: 40px;
+        margin-top: 80px;
+    }
+
+    .footer__name {
+        font-size: 18px;
+        margin-bottom: 5px;
+    }
+
+    .footer__copyright {
+        font-size: 14px;
+    }
+}
+
+
+@media screen and (min-width: 853px) {
+
+    .center {
+        max-width: 853px;
+    }
+
+    body {
+        font-size: 20px;
+    }
+
+    .header {
+        padding: 40px;
+        max-width: 853px;
+    }
+
+
+    .nav__list {
+        gap: 10px;
+        padding: 10px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 40px;
+
+    }
+
+    .offer__content {
+        max-width: 650px;
+    }
+
+    .offer__title {
+        font-size: 34px;
+        margin-bottom: 40px;
+    }
+
+    .offer__desc {
+        margin-bottom: 40px;
+    }
+
+    .btn {
+        min-height: 30px;
+        padding: 20px;
+        min-width: 250px;
+    }
+
+
+    .about {
+        padding: 80px 40px;
+    }
+
+    .about__title {
+        font-size: 28px;
+        margin-bottom: 20px;
+
+    }
+
+
+    .project {
+        padding: 40px;
+        gap: 30px;
+        max-width: 853px;
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+    .project__blok {
+        padding-left: 5px;
+    }
+
+
+    .project__picture {
+        max-width: 30px;
+    }
+
+    .project__title {
+        font-size: 16px;
+        line-height: 1;
+    }
+
+    .project__desc {
+        font-size: 12px;
+        line-height: 1.2;
+    }
+
+    .process {
+        padding: 80px 40px;
+    }
+
+    .process__title {
+        font-size: 28px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .video {
+        max-width: 853px;
+    }
+
+    .video__picture {
+        max-width: 853px;
+    }
+
+    .video__button {
+        max-width: 80px;
+    }
+
+    .footer {
+        padding: 40px;
+        margin-top: 80px;
+    }
+
+    .footer__name {
+        font-size: 18px;
+        margin-bottom: 5px;
+    }
+
+    .footer__copyright {
+        font-size: 14px;
+    }
+}
+
+
+@media screen and (min-width: 912px) {
+
+    .center {
+        max-width: 912px;
+    }
+
+    body {
+        font-size: 22px;
+    }
+
+    .header {
+        padding: 40px;
+        max-width: 912px;
+    }
+
+
+    .nav__list {
+        gap: 30px;
+        padding: 10px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 60px 40px;
+
+    }
+
+    .offer__content {
+        max-width: 750px;
+    }
+
+    .offer__title {
+        font-size: 40px;
+        margin-bottom: 40px;
+    }
+
+    .offer__desc {
+        margin-bottom: 40px;
+    }
+
+    .btn {
+        min-height: 80px;
+        padding: 30px;
+        min-width: 300px;
+    }
+
+
+    .about {
+        padding: 60px;
+    }
+
+    .about__title {
+        font-size: 28px;
+        margin-bottom: 20px;
+
+    }
+
+
+    .project {
+        padding: 40px;
+        max-width: 912px;
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+    .project__blok {
+        padding-left: 10px;
+    }
+
+
+    .project__picture {
+        max-width: 40px;
+    }
+
+    .project__title {
+        font-size: 18px;
+    }
+
+    .project__desc {
+        font-size: 14px;
+    }
+
+    .process {
+        padding: 80px;
+    }
+
+    .process__title {
+        font-size: 28px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .video {
+        max-width: 912px;
+    }
+
+    .video__picture {
+        max-width: 912px;
+    }
+
+    .video__button {
+        max-width: 80px;
+    }
+
+    .footer {
+        padding: 40px;
+        margin-top: 80px;
+    }
+
+    .footer__name {
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+
+    .footer__copyright {
+        font-size: 14px;
+    }
+}
+
+
+@media screen and (min-width: 1024px) {
+
+    .center {
+        max-width: 1024px;
+    }
+
+    body {
+        font-size: 22px;
+    }
+
+    .header {
+        padding: 40px;
+        max-width: 1024px;
+    }
+
+
+    .nav__list {
+        gap: 30px;
+        padding: 10px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 60px 40px;
+
+    }
+
+    .offer__content {
+        max-width: 750px;
+    }
+
+    .offer__title {
+        font-size: 40px;
+        margin-bottom: 40px;
+    }
+
+    .offer__desc {
+        margin-bottom: 40px;
+    }
+
+    .btn {
+        min-height: 80px;
+        padding: 40px;
+        min-width: 350px;
+    }
+
+
+    .about {
+        padding: 60px;
+    }
+
+    .about__title {
+        font-size: 28px;
+        margin-bottom: 20px;
+
+    }
+
+
+    .project {
+        padding: 40px;
+        max-width: 1024px;
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+    .project__blok {
+        padding-left: 10px;
+    }
+
+
+    .project__picture {
+        max-width: 40px;
+    }
+
+    .project__title {
+        font-size: 18px;
+    }
+
+    .project__desc {
+        font-size: 14px;
+    }
+
+    .process {
+        padding: 80px;
+    }
+
+    .process__title {
+        font-size: 28px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .video {
+        max-width: 1024px;
+    }
+
+    .video__picture {
+        max-width: 1024px;
+    }
+
+    .video__button {
+        max-width: 80px;
+    }
+
+    .footer {
+        padding: 40px;
+        margin-top: 80px;
+    }
+
+    .footer__name {
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+
+    .footer__copyright {
+        font-size: 14px;
+    }
+}
+
+
+@media screen and (min-width: 1280px) {
+
+    .center {
+        max-width: 1280px;
+    }
+
+    body {
+        font-size: 26px;
+    }
+
+    .header {
+        padding: 60px;
+        max-width: 1280px;
+    }
+
+
+    .nav__list {
+        gap: 30px;
+        padding: 10px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 60px 40px;
+
+    }
+
+    .offer__content {
+        max-width: 900px;
+    }
+
+    .offer__title {
+        font-size: 44px;
+        margin-bottom: 50px;
+    }
+
+    .offer__desc {
+        margin-bottom: 50px;
+    }
+
+    .btn {
+        min-height: 80px;
+        padding: 40px;
+        min-width: 350px;
+    }
+
+
+    .about {
+        padding: 60px 40px;
+    }
+
+    .about__title {
+        font-size: 36px;
+        margin-bottom: 40px;
+
+    }
+
+
+    .project {
+        padding: 60px 40px;
+        max-width: 1280px;
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+    .project__blok {
+        padding-left: 10px;
+    }
+
+
+    .project__picture {
+        max-width: 80px;
+    }
+
+    .project__title {
+        font-size: 20px;
+        line-height: 1.5;
+    }
+
+    .project__desc {
+        font-size: 16px;
+        line-height: 1;
+    }
+
+    .process {
+        padding: 80px 40px;
+    }
+
+    .process__title {
+        font-size: 36px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .video {
+        max-width: 1280px;
+    }
+
+    .video__picture {
+        max-width: 1280px;
+    }
+
+    .video__button {
+        max-width: 100px;
+    }
+
+    .footer {
+        padding: 60px 40px;
+        margin-top: 80px;
+    }
+
+    .footer__name {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    .footer__copyright {
+        font-size: 16px;
+    }
+}
+
+
+@media screen and (min-width: 1600px) {
+
+    .center {
+        max-width: 1600px;
+    }
+
+    body {
+        font-size: 30px;
+    }
+
+    .header {
+        padding: 60px;
+        max-width: 1600px;
+    }
+
+
+    .nav__list {
+        gap: 30px;
+        padding: 10px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 60px 60px;
+
+    }
+
+    .offer__content {
+        max-width: 1000px;
+    }
+
+    .offer__title {
+        font-size: 48px;
+        margin-bottom: 60px;
+    }
+
+    .offer__desc {
+        margin-bottom: 60px;
+    }
+
+    .btn {
+        min-height: 80px;
+        padding: 40px;
+        min-width: 400px;
+    }
+
+
+    .about {
+        padding: 60px 60px;
+    }
+
+    .about__title {
+        font-size: 38px;
+        margin-bottom: 60px;
+
+    }
+
+
+    .project {
+        padding: 60px 60px;
+        max-width: 1600px;
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+    .project__blok {
+        padding-left: 10px;
+    }
+
+
+    .project__picture {
+        max-width: 100px;
+    }
+
+    .project__title {
+        font-size: 22px;
+        line-height: 1.3;
+    }
+
+    .project__desc {
+        font-size: 18px;
+        line-height: 1;
+    }
+
+    .process {
+        padding: 80px 60px;
+    }
+
+    .process__title {
+        font-size: 38px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .video {
+        max-width: 1600px;
+    }
+
+    .video__picture {
+        max-width: 1600px;
+    }
+
+    .video__button {
+        max-width: 110px;
+    }
+
+    .footer {
+        padding: 60px 60px;
+        margin-top: 100px;
+    }
+
+    .footer__name {
+        font-size: 22px;
+        margin-bottom: 10px;
+    }
+
+    .footer__copyright {
+        font-size: 18px;
+    }
+}
+
+
+@media screen and (min-width: 1920px) {
+
+    .center {
+        max-width: 1920px;
+    }
+
+    body {
+        font-size: 16px;
+    }
+
+    .header {
+        padding: 80px;
+        max-width: 1920px;
+    }
+
+
+    .nav__list {
+        gap: 30px;
+        padding: 10px;
+        justify-content: space-between;
+    }
+
+    .offer {
+        padding: 60px 80px;
+
+    }
+
+    .offer__content {
+        max-width: 1000px;
+    }
+
+    .offer__title {
+        font-size: 48px;
+        margin-bottom: 60px;
+    }
+
+    .offer__desc {
+        margin-bottom: 60px;
+    }
+
+    .btn {
+        min-height: 80px;
+        padding: 40px;
+        min-width: 600px;
+    }
+
+
+    .about {
+        padding: 100px 80px;
+    }
+
+    .about__title {
+        font-size: 40px;
+        margin-bottom: 60px;
+
+    }
+
+
+    .project {
+        padding: 100px 80px;
+        max-width: 1920px;
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+    .project__blok {
+        padding-left: 10px;
+    }
+
+
+    .project__picture {
+        max-width: 100px;
+    }
+
+    .project__title {
+        font-size: 24px;
+        line-height: 1.3;
+    }
+
+    .project__desc {
+        font-size: 20px;
+        line-height: 1;
+    }
+
+    .process {
+        padding: 110px 80px;
+    }
+
+    .process__title {
+        font-size: 38px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .video {
+        max-width: 1920px;
+    }
+
+    .video__picture {
+        max-width: 1920px;
+    }
+
+    .video__button {
+        max-width: 120px;
+    }
+
+    .footer {
+        padding: 60px 80px;
+        margin-top: 100px;
+    }
+
+    .footer__name {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    .footer__copyright {
+        font-size: 20px;
     }
 }
