--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 360px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -409,6 +411,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 375px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -535,6 +539,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 390px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -662,6 +668,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 412px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -788,6 +796,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 414px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -915,6 +925,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 430px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -1041,6 +1053,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 540px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -1168,6 +1182,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 768px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -1293,6 +1309,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 820px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -1418,6 +1436,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 853px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -1543,10 +1563,12 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 912px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
-        font-size: 22px;
+        font-size: 14px;
     }
 
     .header {
@@ -1665,6 +1687,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 1024px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -1787,6 +1811,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 1280px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -1911,6 +1937,8 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 1600px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
@@ -2035,10 +2063,12 @@ h1, h2, h3, h4, h5, h6 {
 
     .center {
         max-width: 1920px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body {
-        font-size: 34px;
+        font-size: 28px;
     }
 
     .header {
@@ -2065,6 +2095,7 @@ h1, h2, h3, h4, h5, h6 {
     .offer__title {
         font-size: 48px;
         margin-bottom: 60px;
+
     }
 
     .offer__desc {
@@ -2074,12 +2105,13 @@ h1, h2, h3, h4, h5, h6 {
     .btn {
         min-height: 80px;
         padding: 40px;
-        min-width: 600px;
+        min-width: 400px;
     }
 
 
     .about {
         padding: 100px 80px;
+
     }
 
     .about__title {
